@@ -90,9 +90,12 @@ class CloudformationConverter {
     MappingNode mappingNode = (MappingNode) node;
     List<TupleTree> elements = new ArrayList<>();
 
-    if (mappingNode.getValue().size() == 1 && isFullFunctionCall(mappingNode.getValue().get(0))) {
-      NodeTuple functionCall = mappingNode.getValue().get(0);
-      return convertTupleToFunctionCall((ScalarNode) functionCall.getKeyNode(), functionCall.getValueNode());
+    if (mappingNode.getValue().size() == 1 && mappingNode.getValue().get(0).getKeyNode() instanceof ScalarNode) {
+      NodeTuple functionCallNode = mappingNode.getValue().get(0);
+      FunctionCallTree functionCall = convertTupleToFunctionCall((ScalarNode) functionCallNode.getKeyNode(), functionCallNode.getValueNode());
+      if (functionCall != null) {
+        return functionCall;
+      }
     }
 
     for (NodeTuple elementNode : mappingNode.getValue()) {
@@ -102,43 +105,32 @@ class CloudformationConverter {
     return new MappingTreeImpl(elements, tag(node), range(node), comments(node));
   }
 
-  private static CloudformationTree convertTupleToFunctionCall(ScalarNode functionNameNode, Node argumentList) {
-    String functionName = functionNameNode.getValue();
-    // Remove leading Fn:: from function name
-    if (!"Ref".equals(functionName)) {
-      functionName = functionName.substring(4);
-    }
-
-    TextRange functionRange = TextRanges.merge(List.of(range(functionNameNode), range(argumentList)));
-    List<Comment> functionComments = comments(functionNameNode);
-    functionComments.addAll(comments(argumentList));
-
-    List<CloudformationTree> arguments = new ArrayList<>();
-    if (argumentList instanceof SequenceNode) {
-      for (Node elementNode : ((SequenceNode) argumentList).getValue()) {
-        arguments.add(CloudformationConverter.convert(elementNode));
+  @Nullable
+  private static FunctionCallTreeImpl convertTupleToFunctionCall(ScalarNode functionNameNode, Node argumentList) {
+    return fullStyleFunctionName(functionNameNode.getValue()).map(functionName -> {
+      List<CloudformationTree> arguments = new ArrayList<>();
+      if (argumentList instanceof SequenceNode) {
+        for (Node elementNode : ((SequenceNode) argumentList).getValue()) {
+          arguments.add(CloudformationConverter.convert(elementNode));
+        }
+      } else {
+        arguments.add(CloudformationConverter.convert(argumentList));
       }
-    } else {
-      arguments.add(CloudformationConverter.convert(argumentList));
-    }
 
-    return new FunctionCallTreeImpl(functionName, FunctionCallTree.Style.FULL, arguments, functionRange, functionComments);
-  }
+      List<Comment> functionComments = comments(functionNameNode);
+      functionComments.addAll(comments(argumentList));
 
-  private static boolean isFullFunctionCall(NodeTuple nodeTuple) {
-    Node key = nodeTuple.getKeyNode();
-    return key instanceof ScalarNode
-      && (((ScalarNode) key).getValue().startsWith("Fn::") || ((ScalarNode) key).getValue().equals("Ref"));
-  }
-
-  private static boolean isShortFunctionCall(Node node) {
-    return tag(node).startsWith("!");
+      var functionRange = TextRanges.merge(List.of(range(functionNameNode), range(argumentList)));
+      return new FunctionCallTreeImpl(functionName, FunctionCallTree.Style.FULL, arguments, functionRange, functionComments);
+    }).orElse(null);
   }
 
   private static CloudformationTree convertScalar(Node node) {
     ScalarNode scalarNode = (ScalarNode) node;
-    if (isShortFunctionCall(scalarNode)) {
-      return convertScalarToFunctionCall(scalarNode);
+
+    FunctionCallTree functionCallFromScalar = convertScalarToFunctionCall(scalarNode);
+    if (functionCallFromScalar != null) {
+      return functionCallFromScalar;
     }
     return new ScalarTreeImpl(scalarNode.getValue(), scalarStyleConvert(scalarNode.getScalarStyle()), tag(scalarNode), range(scalarNode), comments(node));
   }
@@ -152,27 +144,44 @@ class CloudformationConverter {
       elements.add(CloudformationConverter.convert(elementNode));
     }
 
-    if (isShortFunctionCall(sequenceNode))  {
-      return convertSequenceToFunctionCall(sequenceNode, elements);
+    FunctionCallTree functionCallFromScalar = convertSequenceToFunctionCall(sequenceNode, elements);
+    if (functionCallFromScalar != null) {
+      return functionCallFromScalar;
     }
     return new SequenceTreeImpl(elements, tag(node), range(node), comments(node));
   }
 
+  @Nullable
   private static FunctionCallTree convertSequenceToFunctionCall(SequenceNode functionNode, List<CloudformationTree> arguments) {
-    return new FunctionCallTreeImpl(shortStyleFunctionName(functionNode), FunctionCallTree.Style.SHORT, arguments, range(functionNode), comments(functionNode));
+    return shortStyleFunctionName(functionNode).map(functionName ->
+      new FunctionCallTreeImpl(functionName, FunctionCallTree.Style.SHORT, arguments, range(functionNode), comments(functionNode))
+    ).orElse(null);
   }
 
+  @Nullable
   private static FunctionCallTree convertScalarToFunctionCall(ScalarNode scalarNode) {
-    TextRange functionRange = range(scalarNode);
-    ScalarTree argument = new ScalarTreeImpl(scalarNode.getValue(), ScalarTree.Style.OTHER, Tag.STR.getValue(), functionRange, Collections.emptyList());
-    return new FunctionCallTreeImpl(shortStyleFunctionName(scalarNode), FunctionCallTree.Style.SHORT, List.of(argument), functionRange, comments(scalarNode));
+    return shortStyleFunctionName(scalarNode).map(functionName -> {
+      var functionRange = range(scalarNode);
+      var argument = new ScalarTreeImpl(scalarNode.getValue(), ScalarTree.Style.OTHER, Tag.STR.getValue(), functionRange, Collections.emptyList());
+      return new FunctionCallTreeImpl(functionName, FunctionCallTree.Style.SHORT, List.of(argument), functionRange, comments(scalarNode));
+    }).orElse(null);
   }
 
-  /**
-   * Remove leading exclamation mark from function name
-   */
-  private static String shortStyleFunctionName(Node functionNode) {
-    return tag(functionNode).substring(1);
+  private static Optional<String> shortStyleFunctionName(Node functionNode) {
+    String tag = tag(functionNode);
+    if (tag.startsWith("!")) {
+      return Optional.of(tag.substring(1));
+    }
+    return Optional.empty();
+  }
+
+  private static Optional<String> fullStyleFunctionName(String value) {
+    if (value.startsWith("Fn::")) {
+      return Optional.of(value.substring(4));
+    } else if (value.equals("Ref")) {
+      return Optional.of(value);
+    }
+    return Optional.empty();
   }
 
   private static TextRange range(Node node) {
